#374 Formatting LESS - Auto-formatting and removing useless comments.

--- a/less/main/animations.less
+++ b/less/main/animations.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Main > Animations
-// ----------------------------------------
 
-// ------------------------------
-// #Framework mixins
-// ------------------------------
+// Framework mixins
 
 .animation(@animation...) {
     -webkit-animation: @animation;
@@ -42,9 +38,7 @@
 	transform-origin: center bottom;
 }
 
-// ------------------------------
-// #Fade In
-// ------------------------------
+// Fade In
 
 @-webkit-keyframes fadeIn {
     0% {
@@ -87,9 +81,7 @@
     }
 }
 
-// ------------------------------
-// #Fade in Up
-// ------------------------------
+// Fade in Up
 
 @-webkit-keyframes fadeInUp {
     0% {
@@ -142,9 +134,7 @@
     }
 }
 
-// ------------------------------
-// #Scale Up
-// ------------------------------
+// Scale Up
 
 @-webkit-keyframes scaleUp {
     0% {
