--- a/less/main/table.less
+++ b/less/main/table.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Main > Table
-// ----------------------------------------
 
-// ------------------------------
-// #Table
-// ------------------------------
+// Table
 
 table {
 	.paragraph;
