--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -1,12 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Main > Theme
-// ----------------------------------------
 
-// This contains all styles that are not widgets.
-
-// ------------------------------
-// #Site Styles
-// ------------------------------
+// Site Styles
 
 * {
 	.box-sizing(border-box);
@@ -47,14 +41,11 @@ body {
 	padding: 0;
 }
 
-// HTML5 Semantic Elements
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
 	display: block;
 }
 
-// ------------------------------
-// #Header
-// ------------------------------
+// Header
 
 .template__header,
 .template__home .widget[data-widget-type="responsiveslideshow"] + .template__header {
@@ -101,9 +92,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 	}
 }
 
-// ------------------------------
-// #Footer
-// ------------------------------
+// Footer
 
 .template__footer {
     width: 100%;
