--- a/less/main/variables.less
+++ b/less/main/variables.less
@@ -1,12 +1,7 @@
-// ----------------------------------------
 // Velocity: LESS > Main > Variables
-// ----------------------------------------
 
-// ------------------------------
-// #Breakpoints
-// ------------------------------
+// Breakpoints
 
-// Break point for smaller devices.
 @desktop-wide: ~"only screen and (max-width: 2000px)";
 @desktop: ~"only screen and (max-width: 1650px)";
 @desktop-narrow: ~"only screen and (max-width: 1200px)";
@@ -14,28 +9,23 @@
 @tablet: ~"only screen and (max-width: 768px)";
 @mobile: ~"only screen and (max-width: 650px)";
 @mobile-small: ~"only screen and (max-width: 380px)";
-
-// When the colums in the layout break for smaller devices.
 @columns-tablet: ~"only screen and (max-width: 925px)";
 @columns-mobile: ~"only screen and (max-width: 650px)";
 
-// ------------------------------
-// #Layout
-// ------------------------------
+// Layout
 
 @layout-max-width: 1600px;
 @layout-width-desktop: 1200px;
 @layout-width-tablet: 90%;
 
 // Global Widget Spacing
+
 @value__widget--spacing--desktop: 70px;
 @value__widget--spacing--laptop:  60px;
 @value__widget--spacing--tablet:  40px;
 @value__widget--spacing--mobile:  30px;
 
-// ------------------------------
-// #Colors
-// ------------------------------
+// Colors
 
 @color-text--faded: fade(@color__p--text, 75%);
 @color-text--light: fade(@color__p--text, 50%);
