--- a/less/plugins/blog/blog-post-list.less
+++ b/less/plugins/blog/blog-post-list.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Blog > Blog Posts List
-// ----------------------------------------
 
-// ------------------------------
-// #All posts
-// ------------------------------
+// All posts
 
 .widget[data-name="blogpostlist"] {
 	.blogpostlist {
@@ -20,9 +16,7 @@
 	margin: -1px;
 }
 
-// ------------------------------
-// #Single Article
-// ------------------------------
+// Single Article
 
 .blogpostlist__post-article {
 	.display-flex(flex);
@@ -86,9 +80,7 @@
 	}
 }
 
-// ------------------------------
-// #Image
-// ------------------------------
+// Image
 
 .blogpostlist__post-image {
 	position: absolute;
@@ -114,16 +106,12 @@
 		}
     }
 
-    // Using the background image instead.
-
     .blogpostlist__image {
         display: none;
     }
 }
 
-// ------------------------------
-// #Content
-// ------------------------------
+// Content
 
 .blogpostlist__post-content {
 	.paragraph;
@@ -191,9 +179,7 @@ a.blogpostlist__read-more {
 	}
 }
 
-// ------------------------------
-// #Footer
-// ------------------------------
+// Footer
 
 .blogpostlist__post-footer {
 	.paragraph;
@@ -264,8 +250,6 @@ a.blogpostlist__read-more {
 	}
 }
 
-// ------------------------------
-// #Paginatinon
-// ------------------------------
+// Paginatinon
 
 // For pagination, see less/plugins/plugins.less.
