--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Blog > Blog Post
-// ----------------------------------------
 
-// ------------------------------
-// #Article
-// ------------------------------
+// Article
 
 .template__content >,
 .template__content section > {
@@ -28,9 +24,8 @@
 	}
 }
 
-// ------------------------------
-// #Image
-// ------------------------------
+// Image
+
 .blogpost {
 	.blogpost__post-image {
 		.paragraph;
@@ -81,17 +76,13 @@
 			padding-bottom: 150%;
 		}
 
-		// Using the background image instead.
-
 		.image {
 			display: none;
 		}
 	}
 }
 
-// ------------------------------
-// #Post Header, Content, and Footer
-// ------------------------------
+// Post Header, Content, and Footer
 
 .blogpost__post-content,
 .blogpost__post-footer {
@@ -225,9 +216,7 @@
 	}
 }
 
-// ------------------------------
-// #Post Timestamp
-// ------------------------------
+// Post Timestamp
 
 .blogpost__post-footer {
 	.timestamp {
@@ -260,9 +249,7 @@
 	}
 }
 
-// ------------------------------
-// #Post Attributes
-// ------------------------------
+// Post Attributes
 
 .blogpost__post-attributes {
 	position: relative;
@@ -304,9 +291,7 @@ a.blogpost__tag-link {
     hyphens: none;
 }
 
-// ------------------------------
-// #Sharing Links
-// ------------------------------
+// Sharing Links
 
 .blogpost__sharing-links {
 	.clearfix();
