--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Blog > Blog Search
-// ----------------------------------------
 
-// -----------------------------
-// #Overall
-// -----------------------------
+// Overall
 
 .widget[data-name="blogsearch"] {
 	background-color: @color__blogsearch--background;
@@ -14,17 +10,13 @@
 	width: auto;
 }
 
-// -----------------------------
-// #Legend
-// -----------------------------
+// Legend
 
 .blogsearch__legend {
 	display: none;
 }
-	
-// -----------------------------
-// #Form Body
-// -----------------------------
+
+// Form Body
 
 .blogsearch {
 	.signupform;
