--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Ecommerce > Basket Summary
-// ----------------------------------------
 
-// ------------------------------
-// #Table Styles
-// ------------------------------
+// Table Styles
 
 .summary-table {
     border-collapse: separate;
@@ -71,8 +67,6 @@
 			}
 		}
 		
-		
-
 		// Row Heading
 
 		&--heading {
@@ -113,9 +107,7 @@
 	}
 }
 
-// ------------------------------
-// #Cell Image
-// ------------------------------
+// Cell Image
 
 .ecombasketsummary {
 	.table-row {
@@ -138,8 +130,6 @@
 					background-position: top;
 				}
 
-				// Image
-
 				.image {
 					display: none;
 				}
@@ -148,9 +138,7 @@
 	}
 }
 
-// ------------------------------
-// #Cell Title
-// ------------------------------
+// Cell Title
 
 .ecombasketsummary {
 	.table-row {
@@ -166,17 +154,13 @@
 			}
 		}
 
-		// Item Link
-
 		.summary-item-link {
 			color: @color__p--text;
 		}
 	}
 }
 
-// ------------------------------
-// #Cell Quantity
-// ------------------------------
+// Cell Quantity
 
 .ecombasketsummary {
 	.table-row {
@@ -212,8 +196,6 @@
 				min-width: 75px;
 			}
 
-			// Button Quantity
-
 			.button--quantity {
 				width: 30px;
 				height: 30px;
@@ -232,8 +214,6 @@
 				}
 			}
 
-			// Quantity Field
-
 			.quantity-field {
 				color: @color__p--text;
 			}
@@ -241,9 +221,7 @@
 	}
 }
 
-// ------------------------------
-// #Cell Price
-// ------------------------------
+// Cell Price
 
 .ecombasketsummary {
 	.table-row {
@@ -268,9 +246,7 @@
 	}
 }
 
-// ------------------------------
-// #Cell Total
-// ------------------------------
+// Cell Total
 
 .ecombasketsummary {
 	.table-row {
@@ -291,9 +267,7 @@
 	}
 }
 
-// ------------------------------
-// #Order Total
-// ------------------------------
+// Order Total
 
 .ecombasketsummary {
     .table-row--order-total {
@@ -312,9 +286,7 @@
 	}
 }
 
-// ------------------------------
-// #Button
-// ------------------------------
+// Button
 
 .summary-form {
     text-align: right;
