--- a/less/plugins/ecommerce/ecommerce-basket.less
+++ b/less/plugins/ecommerce/ecommerce-basket.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Ecommerce > Basket
-// ----------------------------------------
 
-// ------------------------------
-// #Basket Icon
-// ------------------------------
+// Basket Icon
 
 .widget[data-widget-type="ecombasket"] {
     margin: 0 auto;
@@ -80,9 +76,7 @@
 	}
 }
 
-// -----------------------------
-// #Basket Content
-// -----------------------------
+// Basket Content
 
 .show-content {
 	.ecombasket {
