--- a/less/plugins/ecommerce/ecommerce-categories.less
+++ b/less/plugins/ecommerce/ecommerce-categories.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Ecommerce > Categories
-// ----------------------------------------
 
-// ------------------------------
-// #List
-// ------------------------------
+// List
 
 .ecomcategorieslist__category-list {
     .display-flex(flex);
@@ -25,9 +21,7 @@
 	}
 }
 
-// ------------------------------
-// #Item
-// ------------------------------
+// Item
 
 .ecomcategorieslist__category-item {
 	.paragraph;
