--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Ecommerce > Product List
-// ----------------------------------------
 
-// ------------------------------
-// #Widget
-// ------------------------------
+// Widget
 
 .page.page__ecomproduct {
 	background-color: @color__ecomproductslist--background;
@@ -66,9 +62,7 @@
 	}
 }
 
-// ------------------------------
-// #Title
-// ------------------------------
+// Title
 
 .ecomproductslist__listing-title {
     display: none;
@@ -78,9 +72,7 @@
 	}
 }
 
-// ------------------------------
-// #Product Filters
-// ------------------------------
+// Product Filters
 
 .ecomproductslist__product-filters {
 	width: 90%;
@@ -167,9 +159,7 @@
 	}
 }
 
-// ------------------------------
-// #Product Search
-// ------------------------------
+// Product Search
 
 .ecomproductslist__product-filters .fieldset--search {
 	@media @tablet-horizontal {
@@ -279,9 +269,7 @@
     }
 }
 
-// ------------------------------
-// #Dropdowns
-// ------------------------------
+// Dropdowns
 
 .ecomproductslist__product-filters .fieldset--filters {
     @media @tablet-horizontal {
@@ -344,9 +332,11 @@
 		.select-wrap {
 			margin-top: 0;
 			max-width: none;
+
 			@media @tablet-horizontal {
 				.select.medium;
 			}
+
 			@media @mobile {
 				.select.small;
 			}
@@ -354,9 +344,7 @@
 	}
 }
 
-// ------------------------------
-// #Listing Order
-// ------------------------------
+// Listing Order
 
 .ecomproductslist .listing-order {
     display: none;
@@ -373,9 +361,7 @@
     }
 }
 
-// ------------------------------
-// #Product List
-// ------------------------------
+// Product List
 
 .product-images,
 .product-content {
@@ -416,9 +402,7 @@
 	}
 }
 
-// ------------------------------
-// #Product Item
-// ------------------------------
+// Product Item
 
 .product-item {
 	padding: 0;
@@ -532,9 +516,7 @@
 	color: @color__ecomproductslist-product-title--text;
 }
 
-// ------------------------------
-// #Featured Product
-// ------------------------------
+// Featured Product
 
 .ecomfeaturedproducts {
 	.listing-header {
@@ -559,9 +541,7 @@
 	}
 }
 
-// ------------------------------
-// #Paginatinon
-// ------------------------------
+// Paginatinon
 
 .ecomproductslist .pagination-list {
 	display: block;
