--- a/less/plugins/ecommerce/ecommerce-product.less
+++ b/less/plugins/ecommerce/ecommerce-product.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins > Ecommerce > Product
-// ----------------------------------------
 
-// ------------------------------
-// #Product
-// ------------------------------
+// Product
 
 .template__content >,
 .template__content section > {
@@ -38,17 +34,13 @@
     }
 }
 
-// ------------------------------
-// #Images
-// ------------------------------
+// Images
 
 .product-images {
 	.clearfix();
 }
 
-// ------------------------------
-// #Product Image
-// ------------------------------
+// Product Image
 
 .ecomproduct__product-image {
 	margin-bottom: 10px;
@@ -84,9 +76,7 @@
 	}
 }
 
-// ------------------------------
-// #Product Gallery
-// ------------------------------
+// Product Gallery
 
 .product-gallery {
 	.display-flex(flex);
@@ -227,8 +217,6 @@
 			background-color: @color__ecomproduct-images--background;
 		}
 
-        // Image
-
         .image {
 			max-height: none;
 			min-width: 100%;
@@ -238,11 +226,7 @@
     }
 }
 
-// ------------------------------
-// #Product Content
-// ------------------------------
-
-// Product Header
+// Product Content
 
 .product-header {
 	border-bottom: 1px solid fade(@color__ecomproductslist-label--text, 20%);
@@ -250,21 +234,15 @@
 	margin-bottom: 2em;
 }
 
-// Product Title
-
 .product-title {
     color: @color__ecomproduct-title--text !important;
 	padding-bottom: 0.25em;
 }
 
-// Product Price
-
 .ecomproduct__product-price {
 	.heading--4;
     color: @color__ecomproduct-price--text !important;
 }
-
-// Product Body
 
 .product-body {
 	ul li,
@@ -345,33 +323,23 @@ a.ecomproduct__button {
 	}
 }
 
-// ------------------------------
-// #Product Actions
-// ------------------------------
+// Product Actions
 
 .product-actions {
     margin-bottom: 2em;
-	
-    // Select Wrap
 
     .select-wrap {
         max-width: 100%;
 		margin-top: 0;
     }
-	
-    // Legend
 
     .legend {
         display: none;
     }
-	
-    // Fieldset
 
     .fieldset {
         margin-bottom: 2em;
     }
-
-    // Form Group
 
     .form-group {
         display: inline-block;
@@ -387,14 +355,10 @@ a.ecomproduct__button {
     }
 }
 
-// ------------------------------
-// #Product Attributes
-// ------------------------------
+// Product Attributes
 
 .product-attributes {
     .clearfix();
-
-    // Attribute Title
 	
     .product-attribute-title {
     	display: block;
@@ -402,8 +366,6 @@ a.ecomproduct__button {
 		padding: 0.5em 0;
 		font-weight: bold;
     }
-	
-    // Product Category, Product Tags
 
     .product-category,
 	.product-tags {
