--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Buttons
-// ----------------------------------------
 
-// -----------------------------
-// #Button
-// -----------------------------
+// Button
 
 .button,
 a.button,
@@ -31,7 +27,6 @@ a.ecomproduct__button {
 	vertical-align: middle;
 	.transition (all 0.25s ease-in-out);
 	text-align: center;
-	
 	.make-font-a-little-smaller(@font__button--font-size);
 	.make-font-smaller(@font__button--font-size);
 	.make-font-a-lot-smaller(@font__button--font-size);
@@ -102,9 +97,7 @@ a.link-button,
 	}
 }
 
-// -----------------------------
-// #Tweet Button
-// -----------------------------
+// Tweet Button
 
 .tweet .button {
 	&:before {
@@ -112,9 +105,7 @@ a.link-button,
 	}
 }
 
-// -----------------------------
-// #Click to Call
-// -----------------------------
+// Click to Call
 
 .clicktocall .phone-number-link {
 	&:before {
@@ -122,9 +113,7 @@ a.link-button,
 	}
 }
 
-// -----------------------------
-// #Dropbox
-// -----------------------------
+// Dropbox
 
 .dropbox,
 [data-name="filedownload"] {
@@ -171,14 +160,7 @@ a.link-button,
 	}
 }
 
-// -----------------------------
-// #Facebook Like
-// -----------------------------
-
-
-// -----------------------------
-// #Paypal
-// -----------------------------
+// Paypal
 
 .paypalbuynow {
 	.button {
@@ -188,19 +170,12 @@ a.link-button,
 	}
 }
 
-// -----------------------------
 // Icons
-// -----------------------------
 
 .icon:before {
 	margin: 0.5em 0.5em 0.5em 0;
 	width: auto;
 }
-
-
-// -----------------------------
-// #Social Icons
-// -----------------------------
 
 // The List of Social Icons
 
