--- a/less/widgets/embeds.less
+++ b/less/widgets/embeds.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Embeds
-// ----------------------------------------
 
-// -----------------------------
-// #Google Maps
-// -----------------------------
+// Google Maps
 
 .widget[data-name="map"] .map {
 	background-color: transparent;
@@ -22,13 +18,7 @@
 	}
 }
 
-// -----------------------------
-// #Soundcloud
-// -----------------------------
-
-// -----------------------------
-// #YouTube
-// -----------------------------
+// YouTube
 
 .widget[data-name="youtube"] .youtube {
 	background-color: transparent;
@@ -44,16 +34,7 @@
 	}
 }
 
-// -----------------------------
-// #Disqus
-// -----------------------------
-
-// -----------------------------
-// #Embed
-// -----------------------------
-
 // Vimeo embed
-// This makes the video be full width.
 
 .embed-wrap--video iframe {
 	border: 0;
@@ -76,11 +57,3 @@ div.embed-content p {
 	text-align: inherit;
 	color: inherit;
 }
-
-// -----------------------------
-// #LinkedIn Profile
-// -----------------------------
-
-// -----------------------------
-// #LinkedIn Company Profile
-// -----------------------------
