--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -1,8 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Feature
-// ----------------------------------------
 
-// #Feature
+// Feature
 	
 .widget[data-widget-type="feature"] {
 	position: relative;
@@ -10,7 +8,7 @@
 	padding: 0;
 }
 
-// #Background Image
+// Background Image
 
 .feature__background-image {
 	position: relative;
@@ -22,7 +20,7 @@
 	}
 }
 
-// #Content Wrap
+// Content Wrap
 
 .feature__content-wrap {
     position: relative;
@@ -45,7 +43,7 @@
 	}
 }
 
-// #Content Inner Wrap
+// Content Inner Wrap
 
 .feature__content-inner-wrap {
 	margin: auto;
@@ -57,7 +55,7 @@
 	}
 }
 
-// #Headline
+// Headline
 
 .feature__headline {
 	position: relative;
@@ -91,7 +89,7 @@
     }
 }
 
-// #Strapline
+// Strapline
 
 .feature__strapline {
 	position: relative;
@@ -127,7 +125,7 @@
     }
 }
 
-// #Button
+// Button
 
 .feature__button {
 	position: relative;
