--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Forms
-// ----------------------------------------
 
-// ------------------------------
-// #Global Form Styles
-// ------------------------------
+// Global Form Styles
 
 .widget[data-name="signupform"],
 .widget[data-name="contactform"],
@@ -28,18 +24,14 @@
 	}
 }
 
-// ------------------------------
-// #Legend
-// ------------------------------
+// Legend
 
 .form .legend {
 	.heading--3;
 	margin-bottom: none;
 }
 
-// ------------------------------
-// #Label
-// ------------------------------
+// Label
 
 .form label {
 	margin: 0 0 0.3em;
@@ -47,9 +39,7 @@
 	color: @color__form-label--text;
 }
 
-// ------------------------------
-// #Text Inputs
-// ------------------------------
+// Text Inputs
 
 input[type="search"],
 input[type="email"],
@@ -87,9 +77,7 @@ textarea {
 	}
 }
 
-// ------------------------------
-// #Dropdowns
-// ------------------------------
+// Dropdowns
 
 .select-wrap {
     position: relative;
@@ -163,9 +151,7 @@ textarea {
     display: none;
 }
 
-// ------------------------------
-// #Placeholders
-// ------------------------------
+// Placeholders
 
 ::-webkit-input-placeholder {
    color: @@color-text--light;
@@ -201,9 +187,7 @@ input:focus {
     }
 }
 
-// ------------------------------
-// #Radio Buttons and Checkboxes
-// ------------------------------
+// Radio Buttons and Checkboxes
 
 .widget .form {
 	.option-list,
@@ -326,9 +310,7 @@ input:focus {
 	}
 }
 
-// ------------------------------
-// #Error Messages
-// ------------------------------
+// Error Messages
 
 .form {
     input.error {
@@ -350,9 +332,7 @@ input:focus {
     }
 }
 
-// ------------------------------
-// #Form Group Button
-// ------------------------------
+// Form Group Button
 
 .form-group {
 	.button {
@@ -372,9 +352,7 @@ input:focus {
 	}
 }
 
-// ------------------------------
-// #Sign Up Form
-// ------------------------------
+// Sign Up Form
 
 .signupform {
 	.form-body {
