--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Gallery
-// ----------------------------------------
 
-// ------------------------------
-// #Whole Gallery
-// ------------------------------
+// Whole Gallery
 
 .widget[data-name="gallery"],
 .widget[data-widget-type="gallery"] {
@@ -21,9 +17,7 @@
 	margin: -4px;
 }
 
-// ------------------------------
-// #Single Gallery Item
-// ------------------------------
+// Single Gallery Item
 
 .gallery__gallery-item {
 	.flex-grow(1);
@@ -147,9 +141,7 @@
 	}
 }
 
-// ------------------------------
-// #Image
-// ------------------------------
+// Image
 
 .gallery__gallery-item {
 	.gallery__figure {
@@ -178,9 +170,7 @@
 	}
 }
 
-// ------------------------------
-// #Caption
-// ------------------------------
+// Caption
 
 .gallery__gallery-item {
 	.gallery__caption {
@@ -242,9 +232,7 @@
 	}
 }
 
-// ------------------------------
-// #Image and Caption
-// ------------------------------
+// Image and Caption
 
 a.gallery__image-link,
 .gallery__caption {
