--- a/less/widgets/image.less
+++ b/less/widgets/image.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Image
-// ----------------------------------------
 
-// ------------------------------
-// #Image
-// ------------------------------
+// Image
 
 .widget[data-name="image"] {
 	.paragraph;
@@ -19,9 +15,7 @@
 	}
 }
 
-// ------------------------------
-// #Caption
-// ------------------------------
+// Caption
 
 .imagewidget {
 	.caption {
