--- a/less/widgets/language-selector.less
+++ b/less/widgets/language-selector.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Language Selection
-// ----------------------------------------
 
-// ------------------------------
-// #General Styles
-// ------------------------------
+// General Styles
 
 @language-padding: 1em;
 
@@ -58,9 +54,7 @@
     }
 }
 
-// ------------------------------
-// #Inner
-// ------------------------------
+// Inner
 
 .language-selector__inner {
 	.language-selector &,
@@ -91,9 +85,7 @@
 	}
 }
 
-// ------------------------------
-// #List
-// ------------------------------
+// List
 
 .language-selector__list {
 	.language-selector.language-selector--dropdown & {
@@ -118,9 +110,7 @@
 	}
 }
 
-// ------------------------------
-// #Item
-// ------------------------------
+// Item
 
 .language-selector__item {
 	.language-selector &,
@@ -188,9 +178,7 @@
 	}
 }
 
-// ------------------------------
-// #Link
-// ------------------------------
+// Link
 
 .language-selector__link {
 	.language-selector & {
@@ -251,9 +239,7 @@
 	}
 }
 
-// ------------------------------
-// #Icon
-// ------------------------------
+// Icon
 
 .language-selector__icon {
 	.language-selector & {
@@ -285,9 +271,7 @@
 	}
 }
 
-// ------------------------------
-// #Name
-// ------------------------------
+// Name
 
 .language-selector__name,
 .language-selector__localised-name {
