--- a/less/widgets/profile.less
+++ b/less/widgets/profile.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Profile
-// ----------------------------------------
 
-// ------------------------------
-// #Global Profile Styles
-// ------------------------------
+// Global Profile Styles
 
 .profile {
      h1, h2, h3, p, a {
@@ -15,43 +11,13 @@
     }
 }
 
-// ------------------------------
-// #Company Strapline
-// ------------------------------
-
-// ------------------------------
-// #Company Description
-// ------------------------------
-
-// ------------------------------
-// #Company Address
-// ------------------------------
-
 // Widget outside the profile.
 
 .address p {
 	padding: 0;
 }
 
-// ------------------------------
-// #Email Address
-// ------------------------------
-
-// ------------------------------
-// #Company Phone
-// ------------------------------
-
-// ------------------------------
-// #Business Name
-// ------------------------------
-
-// ------------------------------
-// #Company Copyright
-// ------------------------------
-
-// ------------------------------
-// #Twitter
-// ------------------------------
+// Twitter
 
 .profile {
 	.tweet-content {
@@ -63,9 +29,7 @@
 	}
 }
 
-// ------------------------------
-// #Signup Form
-// ------------------------------
+// Signup Form
 
 .profile {
 	.form {
@@ -73,9 +37,7 @@
 	}
 }
 
-// ------------------------------
-// #Social Icons
-// ------------------------------
+// Social Icons
 
 .profile {
 	.tweet-item {
