--- a/less/widgets/widgets.less
+++ b/less/widgets/widgets.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Widgets
-// ----------------------------------------
 
-// -----------------------------
-// #Standard Widgets
-// -----------------------------
+// Standard Widgets
 
 section.template {
 	min-height: @font__companyname--font-size+40px;
@@ -49,9 +45,7 @@ section.template {
 	}
 }
 
-// -----------------------------
-// #Layout Width Widgets
-// -----------------------------
+// Layout Width Widgets
 
 .template__content >,
 .template__content section > {
@@ -67,9 +61,7 @@ section.template {
 	}
 }
 
-// -----------------------------
-// #Page Width Widgets
-// -----------------------------
+// Page Width Widgets
 
 .template__content >,
 .template__content section > {
@@ -124,9 +116,7 @@ section.template {
 	}
 }
 
-// -----------------------------
-// #Responsive Columns
-// -----------------------------
+// Responsive Columns
 
 .responsivecolumns {
 	.columns-three-left, 
@@ -140,9 +130,7 @@ section.template {
 	}
 }
 
-// -----------------------------
-// #Line Widget
-// -----------------------------
+// Line Widget
 
 .template__content {
 	&, section, .responsivecolumns section.column {
@@ -166,9 +154,7 @@ section.template {
 	}
 }
 
-// -----------------------------
-// #Widget Animations
-// -----------------------------
+// Widget Animations
 
 .template__content >,
 .template__content section > {
