--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Velocity: LESS > Main > Messages
-// ----------------------------------------
 
-// ------------------------------
-// #Variables
-// ------------------------------
+// Variables
 
 @message-color--standard: #64676e;
 @message-color--error: #f6533d;
@@ -13,11 +9,7 @@
 @message-color--success: #8ec048;
 @message-color--not-found: #64676e;
 
-// ------------------------------
-// #General Messages
-// ------------------------------
-
-// Overall message styling
+// General Messages
 
 .message {
     position: relative;
@@ -145,9 +137,7 @@
     margin: 0;
 }
 
-// ------------------------------
-// #Form Messages
-// ------------------------------
+// Form Messages
 
 .overlay.success .message-box {
     .message;
@@ -160,9 +150,7 @@
     .message--warning;
 }
 
-// ------------------------------
-// #Cookie Message
-// ------------------------------
+// Cookie Message
 
 .bk-cookie-container {
 	border: none;
@@ -235,9 +223,7 @@
 	}
 }
 
-// ------------------------------
-// #Basekit Messages
-// ------------------------------
+// Basekit Messages
 
 .bk-message {
 	.border-radius(0);
