--- a/less/plugins/plugins.less
+++ b/less/plugins/plugins.less
@@ -1,10 +1,4 @@
-// ----------------------------------------
 // Velocity: LESS > Plugins
-// ----------------------------------------
-
-// ------------------------------
-// #Tags and Categories
-// ------------------------------
 	
 .post-category,
 .post-tags {
@@ -77,12 +71,7 @@ a.tag-link,
 	}
 }
 
-// ------------------------------
-// #Paginatinon
-// ------------------------------
-
-// Styles for both the Blog Post List
-// and the Ecommerce Product List.
+// Paginatinon
 
 .ecomproductslist,
 .blogpostlist {
