--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -1,10 +1,6 @@
-// ----------------------------------------
 // Duotone: LESS > Widgets > Navigation
-// ----------------------------------------
 
-// ------------------------------
-// #Logo & Company Name
-// ------------------------------
+// Logo & Company Name
 
 .template__company {
 	.display-flex(flex);
@@ -33,8 +29,6 @@
 	
 	&__logo-image {
 		transition: inherit;
-		
-		// If the header is smaller when scrolling down.
 		
 		.template__header--scrolled & {
 			max-width: 40px;
@@ -69,8 +63,6 @@ a.companyname {
 			text-decoration: none;
 		}
 		
-		// If the header is smaller when scrolling down.
-		
 		.template__header--scrolled & {
 			font-size: @font__companyname--font-size*0.8;
 			line-height: 1.2em;
@@ -93,9 +85,7 @@ a.companyname {
 	}
 }
 
-// ------------------------------
-// #Navigation
-// ------------------------------
+// Navigation
 
 .template__navigation {
 	.flex-grow(2);
@@ -147,12 +137,7 @@ a.companyname {
 	}
 }
 
-// ------------------------------
-// #Navigation Toggle Button
-// ------------------------------
-
 // Navigation Toggle Button
-// It only appears on tablet and mobile sizes.
 
 .navigation-toggle {
 	display: none;
@@ -264,24 +249,16 @@ a.companyname {
 	}
 }
 
-// ------------------------------
-// #Navigation Body
-// ------------------------------
-
-// Dark overlay on tablet and mobile.
+// Navigation Body
 
 .navigation-body {
 	.transition(opacity 0s);
-	
-	// This is only shown in Tablet and Mobile
 	
 	@media @tablet {
 		outline: 0;
 		height: 0;
 		width: 0;
 		opacity: 0;
-		
-		// When Navigation is open
 
 		.open & {
 			position: fixed;
@@ -301,10 +278,7 @@ a.companyname {
 	}
 }
 
-
-// ------------------------------
-// #Navigation List
-// ------------------------------
+// Navigation List
 
 .navigation-list {
 	.display-flex(flex);
@@ -332,11 +306,7 @@ a.companyname {
 	}
 }
 
-// ------------------------------
-// #Navigation Items
-// ------------------------------
-
-// Navigation Normal Item
+// Navigation Items
 
 .navigation-item {
 	position: relative;
