--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -1,19 +1,13 @@
-// ----------------------------------------
 // Velocity: LESS > Widgets > Twitter Feed
-// ----------------------------------------
 
-// ------------------------------
-// #Twitter Widget Container
-// ------------------------------
+// Twitter Widget Container
 
 .widget[data-name="twitter"] {
 	.twitter-body-background--spacing();
 	.twitter-widget-background--spacing();
 }
 
-// ------------------------------
-// #Tweet List
-// ------------------------------
+// Tweet List
 
 .twitter__tweet-list {
 	.inline-block-font-hack();
@@ -23,9 +17,7 @@
 	.item--margin-size--border();
 }
 
-// ------------------------------
-// #Tweet Item
-// ------------------------------
+// Tweet Item
 
 .tweet-item {
 	.paragraph;
@@ -48,9 +40,7 @@
     }
 }
 
-// ------------------------------
-// #Avatar
-// ------------------------------
+// Avatar
 
 .twitter__avatar {
 	position: static;
@@ -65,9 +55,7 @@
 	height: @font__p--line-height*2;
 }
 
-// ------------------------------
-// #Account Link
-// ------------------------------
+// Account Link
 
 a.twitter__account-link {
     display: block;
@@ -80,9 +68,7 @@ a.twitter__account-link {
 	
 }
 
-// ------------------------------
-// #Content
-// ------------------------------
+// Content
 
 .tweet-content {
 	padding: 0 0.5em 4em;
@@ -105,9 +91,7 @@ a.twitter__account-link {
 	}
 }
 
-// ------------------------------
-// #Tweet Metadata
-// ------------------------------
+// Tweet Metadata
 
 .tweet-metadata {
 	position: absolute;
