#376 In the footer if the text of the single email form button is too long, it will run out of the content.

--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -340,7 +340,7 @@ a.companyname {
 		color: @color__navigation--text;
 		.transition(all 0.25s ease-in-out 0s);
 		hyphens: none;
-		word-wrap: break-word;
+		word-break: break-word;
 		display: block;
 	
 		.make-font-a-little-smaller(@font__navigation--font-size);
