--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -153,7 +153,7 @@
 	position: relative;
 	padding: 0;
 	hyphens: none;
-	word-wrap: break-word;
+	word-break: break-word;
 	
 	font-family: @font__h1--font-family;
 	font-weight: @font__h1--font-weight;
